# plutarch-cape-submissions

./: .gitignore  CLAUDE.md  README.md  cabal.project  flake.nix  fourmolu.yaml  plutarch-cape-submissions.cabal  treefmt.toml
exe/factorial/: Main.hs
exe/factorial-exbudget/: Main.hs  factorial_exbudget.uplc
exe/factorial-naive/: Main.hs  factorial_naive_recursion.uplc
exe/factorial-size/: Main.hs  factorial_size.uplc
exe/fibonacci/: Main.hs
exe/fibonacci-exbudget/: Main.hs  fibonacci_exbudget.uplc
exe/fibonacci-naive/: Main.hs  fibonacci_naive_recursion.uplc
exe/fibonacci-prepack/: Main.hs
exe/fibonacci-prepacked/: Main.hs  fibonacci_prepacked.uplc
exe/fibonacci-size/: Main.hs  fibonacci_size.uplc
lib/: Compile.hs
