cabal-version: 3.0
name:          plutarch-cape-submissions
version:       0.1.0.0
synopsis:      Plutarch submissions for UPLC-CAPE benchmark
description:
  Four Plutarch implementations for the UPLC-CAPE benchmark:
  factorial, factorial_naive_recursion, fibonacci, fibonacci_naive_recursion

license:       MIT
author:        Yura
maintainer:    yura@example.com
category:      Cardano
build-type:    Simple

common common-opts
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -Wunused-packages

  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeOperators

  build-depends:
    , base    >=4.14 && <5
    , plutarch

library
  import:          common-opts
  hs-source-dirs:  lib
  exposed-modules: Compile
  build-depends:
    , lens
    , plutus-core

common common-exe
  import:        common-opts
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends: plutarch-cape-submissions

executable factorial-size
  import:         common-exe
  main-is:        Main.hs
  hs-source-dirs: exe/factorial-size
  build-depends:  plutus-core

executable factorial-exbudget
  import:         common-exe
  main-is:        Main.hs
  hs-source-dirs: exe/factorial-exbudget
  build-depends:  plutus-core  

executable factorial-naive
  import:         common-exe
  main-is:        Main.hs
  hs-source-dirs: exe/factorial-naive

executable fibonacci-size
  import:         common-exe
  main-is:        Main.hs
  hs-source-dirs: exe/fibonacci-size
  build-depends:  plutus-core    

executable fibonacci-exbudget
  import:         common-exe
  main-is:        Main.hs
  hs-source-dirs: exe/fibonacci-exbudget
  build-depends:  plutus-core    

executable fibonacci-naive
  import:         common-exe
  main-is:        Main.hs
  hs-source-dirs: exe/fibonacci-naive
